[project]
name = "hello-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv==0.9.9",
    "google-search-results>=2.4.2",
    "langchain==1.2.0",
    "langchain-deepseek==1.0.1",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "serpapi>=1.0.2",
    "tavily-python>=0.7.23",
]
