[project]
name = "hello-agents-lujisen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "autogen-agentchat>=0.7.5",
    "autogen-ext>=0.7.5",
    "dashscope>=1.25.17",
    "dotenv==0.9.9",
    "google-search-results>=2.4.2",
    "hello-agents[all]==0.2.0",
    "langchain==1.2.15",
    "langchain-deepseek==1.0.1",
    "memory>=1.0.0",
    "openai>=2.31.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "requests>=2.33.0",
    "sentence-transformers>=5.4.1",
    "serpapi>=1.0.2",
    "spacy>=3.8.13",
    "tavily-python>=0.7.23",
    "tiktoken>=0.12.0",
]
